# ai_for_senior_citizens_ist440w_24

./: .gitignore  README.md
test/openAI_sencit_test/: Cargo.toml
test/openAI_sencit_test/src/: chat.rs  clap_man.rs  db_man.rs  gui_view.rs  main.rs  sttttts.rs
