[package]
name = "openAI_sencit_test"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
openai = "1.0.0-alpha.16"
rusqlite = "0.32.1"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.18", features = ["cargo"] }
directories = "5.0.1"
iced = { version="0.13.1" , features = ["image"] }
curl = "0.4.47"
serde_json = "1.0.132"
cpal = "0.15.3"
rodio = "0.19.0"
mp3-duration = "0.1.10"
hound = "3.5.1"
